SIEW-142 Fixed spacing in accordion search

--- a/assets/source/sass/component/accordion/_accordion.scss
+++ b/assets/source/sass/component/accordion/_accordion.scss
@@ -24,7 +24,7 @@
     border: 0px;
     box-shadow: 0px;
     background-color: $simrishamn-gray;
-    padding: 0px 8px 8px 8px;
+    padding: 8px;
 
     input:not([type="checkbox"]):not([type="radio"]) {
         border-radius: 0px;
